added score to win in settings

--- a/index.html
+++ b/index.html
@@ -48,10 +48,18 @@
             <div type="size" value="big" class="dropdown-item">big</div>
           </div>
         </div>
+        <div class="dropdown points">
+          <button>Points to win</button>
+          <h2 id="points-display"></h2>          
+          <div class="dropdown-content dropdown-points">
+          </div>
+        </div>
       </section>
       <button id="startGame">START</button>
     </section>
-    <canvas id="gameCanvas"> </canvas>
+    <h3>Press ESC for MENU</h3> 
+    <canvas id="gameCanvas">    
+    </canvas>
     <script src="settings.js"></script>
     <script defer src="main.js"></script>
   </body>
